# ts-rpc

./: .gitignore  Cargo.toml  README.md  types.ts
core/: Cargo.toml
core/src/: lib.rs
core/src/ts/: request.ts
examples/: README.md  api.ts
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/solidjs/: README.md  index.html
examples/solidjs/src/: index.tsx
macros/: Cargo.toml
macros/src/: derive.rs  lib.rs
src/: lib.rs
