[package]
name = "ts-rpc"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "core",
  "macros",
  ".",
  "examples/axum"
]

[workspace.dependencies]
ts-rs = { git = "https://github.com/chronicl/ts-rs.git", rev = "4aac8be", version = "6.2" }
axum = { version = "0.6" }

[dependencies]
ts-rs = { workspace = true }
ts-rpc-core = { path = "core",  version = "0.1" }
ts-rpc-macros = { path = "macros", version = "0.1" }

[features]
axum = ["ts-rpc-core/axum-router"]
